# StormRuler

./: .clang-format  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  CPPLINT.cfg  Cloc.sh  Doxyfile  LICENSE.md  README.md  StormRuler.sln  StormRuler.vfproj  TODO.md  _a_a_b_b_8hpp_source.html  _array_utils_8hpp_source.html  _assert_8hpp_source.html  _banner_8hpp_source.html  _base_8hpp_source.html  _bittern_2_matrix_dense_8hpp_source.html  _bittern_2_shape_8hpp_source.html  _concept_utils_8hpp_source.html  _config_8hpp_source.html  _config_default_8hpp_source.html  _convection_scheme_8hpp_source.html  _crtp_8hpp_source.html  _exception_8hpp_source.html  _field_8hpp_source.html  _filtering_streambuf_8hpp_source.html  _flux_scheme_8hpp_source.html  _functional_utils_8hpp_source.html  _functions_8hpp_source.html  _fwd_8hpp_source.html  _gl_buffer_8hpp_source.html  _gl_debug_8hpp_source.html  _gl_framebuffer_8hpp_source.html  _gl_shader_8hpp_source.html  _gl_texture_8hpp_source.html  _gl_vertex_array_8hpp_source.html  _gl_window_8hpp_source.html  (+876 more)
source/: .gitignore  CMakeLists.txt
source/Storm/: .gitignore  Base.hpp  CMakeLists.txt  Config.hpp.in  ConfigDefault.hpp
source/Storm/Bittern/: AABB.hpp  Functions.hpp  Functors.hpp  Mat.hpp  Math.hpp  Matrix.hpp  MatrixAlgorithms.hpp  MatrixBuilder.hpp  MatrixDense.hpp  MatrixIo.hpp  MatrixManipulation.hpp  MatrixMath.hpp  MatrixPart.hpp  MatrixProduct.hpp  MatrixSlicing.hpp  MatrixTarget.hpp  MatrixTranspose.hpp  MatrixView.hpp  MatrixViewConj_.hpp  MatrixViewFunctional.inl  MatrixViewMake_.hpp  MatrixViewMaking.inl  MatrixViewMap_.hpp  MatrixViewProduct_.hpp  MatrixViewSlicing.inl  MatrixViewTranspose_.hpp  MatrixView_.hpp  Shape.hpp  ViewMake_.hpp  View_.hpp
source/Storm/Crow/: ArrayUtils.hpp  ConceptUtils.hpp  FunctionalUtils.hpp  MathUtils.hpp  StreamUtils.hpp  TupleUtils.hpp
source/Storm/Feathers/: ConvectionScheme.hpp  Field.hpp  FluxScheme.hpp  GradientLimiterScheme.hpp  GradientScheme.hpp  SchemesGreenGauss.hpp  SkunkFvBC.hpp  SkunkFvSolver.hpp  SkunkHydro.hpp
source/Storm/Mallard/: Field.hpp  Fwd.hpp  IoTetgen.hpp  IoVtk.hpp  Mesh.hpp  MeshUnstructured.hpp  Shape.hpp  Visualizer.hpp
source/Storm/Solvers/: MatrixDense.hpp  Misc.hpp  Operator.hpp  Preconditioner.hpp  PreconditionerChebyshev.hpp  PreconditionerFactory.hpp  Solver.hpp  SolverBiCgStab.hpp  SolverCg.hpp  SolverCgs.hpp  SolverFactory.hpp  SolverGmres.hpp  SolverIdrs.hpp  SolverLsqr.hpp  SolverMinres.hpp  SolverNewton.hpp  SolverRichardson.hpp  SolverTfqmr.hpp
source/Storm/Utils/: AABB.hpp  Banner.hpp  Crtp.hpp  FilteringStreambuf.hpp  Index.hpp  IndexedContainers.hpp  Math.hpp  Meta.hpp  Object.hpp  Permutations.hpp  SimdBlock.hpp  SimdBlockAvx.hpp  Table.hpp
source/Storm/Vulture/: GlBuffer.hpp  GlDebug.hpp  GlFramebuffer.hpp  GlShader.hpp  GlTexture.hpp  GlVertexArray.hpp  GlWindow.hpp  Scene.hpp  ShaderCells.glsl  ShaderEdges.glsl  ShaderNodes.glsl  ShaderScreenQuad.glsl  Visualizer.hpp
source/StormLite/: CMakeLists.txt
source_docs/: .gitignore  CMakeLists.txt  Doxyfile  Header.html  MainPage.md  PageFooter.html.in  PageHeader.html.in
source_docs/Pages/: Compiling.md  Main.md
src/: CMakeLists.txt  StormRuler.f90  StormRuler_API.c  StormRuler_API.cpp  StormRuler_API.cxx  StormRuler_API.f90  StormRuler_API.h  StormRuler_API_RCI.c  StormRuler_Arithmetics.f90  StormRuler_Array.f90  StormRuler_BLAS.f90  StormRuler_CahnHilliard.f90  StormRuler_Consts.f90  StormRuler_ConvParams.f90  StormRuler_Coroutines.c  StormRuler_Coroutines.h  StormRuler_FDM_BCs.f90  StormRuler_FDM_Base.f90  StormRuler_FDM_Base_Flux.f90  StormRuler_FDM_Coefs.f90  StormRuler_FDM_Convection.f90  StormRuler_FDM_Operators.f90  StormRuler_FDM_RhieChow.f90  StormRuler_FDM_UFDs.f90  StormRuler_FiniteDifferences.f90  StormRuler_Helpers.f90  StormRuler_IO.f90  StormRuler_IO_Base64.f90  StormRuler_IO_Encoder.f90  StormRuler_IO_Stream.f90  StormRuler_IO_Stream_Base64.f90  StormRuler_IO_Stream_ZLIB.f90  StormRuler_IO_Stream_ZLib.f90  StormRuler_IO_VTK.f90  StormRuler_IO_Writer.f90  StormRuler_KrylovSolvers.f90  StormRuler_KrylovSolvers.f90pp  StormRuler_KrylovSolvers_Builtin.f90  StormRuler_KrylovSolvers_MKL.f90  StormRuler_LBM_BCs.f90  (+69 more)
src/Storm/: Base.hpp  Empty.cpp
src/Storm/Bittern/: FastVector.hpp  Mat.hpp  Matrix.hpp  MatrixAction.hpp  MatrixDense.hpp  MatrixIo.hpp  MatrixView.hpp  MatrixViewFunctional.inl  MatrixViewMaking.inl  MatrixViewSlicing.inl  Vector.hpp
src/Storm/Blass/: FastVector.hpp  LegacyTensor.hpp  (+15 more)
src/stormBlas/: Operator.hxx  stormArray.hxx  stormMatrixExtraction.hxx  stormOperator.hxx  stormShape.hxx  stormSubspace.hxx  stormTensor.hxx
src/stormMesh/: Element.cxx  Element.hxx  Forward.hxx  Mesh.hxx
src/stormSolvers/: Expr.hxx  LegacyTensor.hxx  Mat.hxx  Matrix.hxx  MatrixAction.hxx  MatrixBase.hxx  MatrixStatic.hxx  MatrixView.hxx  Misc.hxx  Operator.hxx  Preconditioner.hxx  PreconditionerBroyden.hxx  PreconditionerChebyshev.hxx  PreconditionerFactory.hxx  PreconditionerPolynomial.hxx  Solver.hxx  SolverBiCgStab.hxx  SolverCg.hxx  SolverCgs.hxx  SolverFactory.hxx  SolverGmres.hxx  SolverIdrs.hxx  SolverLsqr.hxx  SolverMinres.hxx  SolverNewton.hxx  SolverRichardson.hxx  SolverTfqmr.hxx  Subspace.hxx  Vector.hxx  stormOperator.hxx  stormPreconditioner.hxx  stormPreconditionerFactory.hxx  stormPreconditionerPolynomial.hxx  stormSolver.hxx  stormSolverBiCgStab.hxx  stormSolverCg.hxx  stormSolverCgs.hxx  stormSolverFactory.hxx  stormSolverGmres.hxx  stormSolverIdrs.hxx  (+5 more)
src/stormTurbo/: Array.hxx  ConvectionScheme.hxx  Euler.hxx  Grid.hxx  Parallel.hxx
src/stormUtils/: Array.hxx  Class.hxx  Enum.hxx  Glm.hxx  JsonValue.hxx  Math.hxx  Object.hxx  SimdBlock.hxx  SimdBlockAvx.hxx  TaggedIndex.hxx
src_aux/SpherePack/: CMakeLists.txt  SpherePackGL.cpp
src_aux/StormRuler_Main/: CMakeLists.txt  StormRuler_Main.c  StormRuler_Main.cpp  StormRuler_Main.cxx  StormRuler_Main_Feathers.cpp  StormRuler_Turbo.cxx  data.c
tests/benchmark/: .gitignore  BitternLaplace2D.cpp  CMakeLists.txt  _Benchmarks.cpp  _Benchmarks.hpp  _BenchmarksConfig.hpp.in
(+330 files in other folders)
